--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
             <div class="todo-app">
                 <!-- Add images to image folder later and edit color scheme-->
                 <h2> To-Do List <img src="" alt="" ></h2>
+                <div class="row">
+                    <input type="text" id="input-box" placeholder="Add your text">
+                    <button onclick="AddTask()">Add</button>
+                </div>
+                <ul id="list-container">
+                    <!-- <li class="checked">Task 1</li>
+                    <li>Task 2</li>
+                    <li>Task 3</li> -->
+                </ul>
             </div>
         </div>
+        <script src="script.js"></script>
 
 
     </body>
