--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 <h2> To-Do List <img src="" alt="" ></h2>
                 <div class="row">
                     <input type="text" id="input-box" placeholder="Add your text">
+                    <input type="datetime-local" id="datetime-picker">
                     <button onclick="addTask()">Add</button>
                 </div>
                 <ul id="list-container">
